feat(global-backend): :sparkles: add package global-backend

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "conventionalCommits.scopes": ["frontend", "channel-backend"]
+  "conventionalCommits.scopes": [
+    "frontend",
+    "channel-backend",
+    "global-backend"
+  ]
 }
