--- a/packages/channel-backend/package.json
+++ b/packages/channel-backend/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "start": "bun run src/index.ts",
-    "dev": "bun run src/index.ts --watch",
+    "dev": "bun run --watch src/index.ts",
     "build": "bun build src/index.ts"
   }
 }
