--- a/packages/global-backend/package.json
+++ b/packages/global-backend/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "start": "bun run src/index.ts",
-    "dev": "bun run src/index.ts --watch",
+    "dev": "bun run --watch src/index.ts",
     "build": "bun build src/index.ts"
   }
 }
