feat(backends): :sparkles: implement available server list api

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "conventionalCommits.scopes": [
     "frontend",
     "channel-backend",
-    "global-backend"
+    "global-backend",
+    "backends"
   ]
 }
