--- a/packages/global-backend/package.json
+++ b/packages/global-backend/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "passport": "^0.7.0"
   },
   "scripts": {
     "start": "bun run src/index.ts",
