--- a/packages/global-backend/package.json
+++ b/packages/global-backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mongodb": "^6.11.0",
     "passport": "^0.7.0"
   },
   "scripts": {
