--- a/packages/common-backend/tsconfig.json
+++ b/packages/common-backend/tsconfig.json
@@ -22,10 +22,6 @@
     // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false,
-
-    "paths": {
-      "@logger": ["../common-backend/src/logger/index.ts"]
-    }
+    "noPropertyAccessFromIndexSignature": false
   }
 }
