refactor(common-backend): :art: add alias for common-backend path

--- a/packages/channel-backend/tsconfig.json
+++ b/packages/channel-backend/tsconfig.json
@@ -25,7 +25,8 @@
     "noPropertyAccessFromIndexSignature": false,
 
     "paths": {
-      "@logger": ["../common-backend/src/logger/index.ts"]
+      "@logger": ["../common-backend/src/logger/index.ts"],
+      "@common/*": ["../common-backend/src/*"]
     }
   }
 }
