--- a/packages/global-backend/package.json
+++ b/packages/global-backend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "chalk": "^5.3.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongodb": "^6.11.0",
