--- a/packages/channel-backend/package.json
+++ b/packages/channel-backend/package.json
@@ -4,16 +4,21 @@
   "type": "module",
   "devDependencies": {
     "@types/bun": "latest",
-    "@types/express": "^5.0.0"
+    "@types/connect-mongodb-session": "^2.4.7",
+    "@types/cookie-parser": "^1.4.8",
+    "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.1"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
     "chalk": "^5.3.0",
+    "connect-mongodb-session": "^5.0.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "mongodb": "^6.11.0",
     "socket.io": "^4.8.1"
   },
