--- a/packages/global-backend/.env.template
+++ b/packages/global-backend/.env.template
@@ -1,1 +1,4 @@
-MONGO_URI="mongodb://root:superSecretPassword@localhost:27017"
+MONGO_URI="mongodb://root:superSecretPassword@localhost:27017/game"
+DB_NAME="game"
+
+SESSION_SECRET="superSecret key"
