feat(backends): :sparkles: add discord auth

--- a/packages/global-backend/.env.template
+++ b/packages/global-backend/.env.template
@@ -2,3 +2,8 @@ MONGO_URI="mongodb://root:superSecretPassword@localhost:27017/game"
 DB_NAME="game"
 
 SESSION_SECRET="superSecret key"
+
+HOST="http://localhost:3004"
+
+DISCORD_CLIENT_ID="123456789012345678"
+DISCORD_CLIENT_SECRET="superSecretPassword"
