feat(frontend): :sparkles: implement socket connection

--- a/packages/channel-backend/.env.template
+++ b/packages/channel-backend/.env.template
@@ -5,3 +5,4 @@ MONGO_URI="mongodb://root:superSecretPassword@localhost:27017/game"
 DB_NAME="game"
 
 SESSION_SECRET="superSecret key"
+JWT_SECRET="superSecret jwt key"
