--- a/packages/global-backend/.env.template
+++ b/packages/global-backend/.env.template
@@ -2,6 +2,7 @@ MONGO_URI="mongodb://root:superSecretPassword@localhost:27017/game"
 DB_NAME="game"
 
 SESSION_SECRET="superSecret key"
+JWT_SECRET="superSecret jwt key"
 
 HOST="http://localhost:3004"
 
