--- a/packages/channel-backend/package.json
+++ b/packages/channel-backend/package.json
@@ -6,8 +6,10 @@
     "@types/bun": "latest",
     "@types/connect-mongodb-session": "^2.4.7",
     "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/passport": "^1.0.17",
     "@types/passport-discord": "^0.1.14"
   },
@@ -18,9 +20,11 @@
     "chalk": "^5.3.0",
     "connect-mongodb-session": "^5.0.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.11.0",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
